# p4

./: .gitignore  1.3  README.md  pyproject.toml  requirements.txt  server_log.txt
.agent/: implementation_plan.md  prd_v2.md  project_status.md  task.md
config/: defaults.yaml
data/: p4.db-shm
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: DataCard.jsx  TrendChart.jsx
models/: POWER_OUTPUT_GRU_20260313_202422.onnx  POWER_OUTPUT_GRU_20260313_202422.onnx.data  POWER_OUTPUT_GRU_20260313_202908.onnx  POWER_OUTPUT_GRU_20260313_202908.onnx.data
src/p4/: __init__.py  config.py  main.py
src/p4/ai/: __init__.py  dataset.py  inferencer.py  manager.py  models.py  pipeline.py  trainer.py
src/p4/api/: __init__.py  auth.py  server.py
src/p4/db/: __init__.py  connection.py  models.py  schema.py
src/p4/gui/: __init__.py  app.py  main_window.py
src/p4/gui/widgets/: __init__.py  monitor_panel.py  opc_panel.py  tag_panel.py
src/p4/opc/: __init__.py  client.py  deadband.py  simulator.py
src/p4/sampling/: __init__.py  engine.py
tests/: __init__.py  test_ai.py  test_config.py  test_db.py  test_deadband.py  test_sampling.py
